# stt-streaming

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: integration.md
examples/: js_browser_client.js  python_client.py
scripts/: benchmark.py  smoke_test.py
src/stt_streaming/: audio.py  config.py  healthz.py  metrics.py  model.py  proto.py  server.py  vad.py  ws.py
tests/: test_audio_format.py  test_metrics.py  test_proto.py
